app/styles/nav.less
.navbar-default {

  background-color: @blush-light;
  background: linear-gradient(to bottom, @blush, @blush-light);
  border-bottom: 0;


  .navbar-nav > li > a {
    color: @gray;
    font-size: 14px;
    padding: 20px;
    text-transform: uppercase;

    &:hover,
    &:focus,
    &:active {
      color: @black;
      background-color: transparent;
    }

    &.btn-primary {
      color: @white;
      padding: 10px;
      margin: 9px 0 9px 20px;

      &:hover,
      &:focus,
      &:active {
        background-color: @blush-dark;
        color: @black;
      }

      @media (max-width: 768px) {
        & {
          border-radius: 0;
          margin-left: 0;
        }
      }

    }
  }


  .navbar-toggle {
    border: 0;
    margin-top: 14px;
    margin-bottom: 14px;

    &:hover,
    &:focus,
    &:active {
      background-color: @blush-dark;
      .icon-bar {
        background-color: @white;
      }
    }

    .icon-bar {
      background-color: @gray;
    }
  }


  .navbar-collapse {
    border-color: @blush-light;
  }


  .navbar-brand {
    height: 60px;
    padding: 6px 20px 0 15px;
  }


  .navbar-right {
    padding-right: 15px;
  }

}

